Add blog section with Netlify CMS support

--- a/simulador.html
+++ b/simulador.html
@@ -55,7 +55,9 @@
             <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
           </ul>
         </li>
-    
+
+        <li><a href="blog/index.html" class="nav-item">Blog</a></li>
+
         <li><a href="index.html#about" class="nav-item">Sobre Mí</a></li>
       </ul>
     </nav>
@@ -85,9 +87,11 @@
           <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
         </ul>
       </li>
-  
+
+      <li><a href="blog/index.html">Blog</a></li>
+
       <li><a href="index.html#about">Sobre Mí</a></li>
-   
+
     </ul>
   </div>
 </header>
