--- a/educacion.html
+++ b/educacion.html
@@ -72,15 +72,11 @@
     <nav class="header-nav">
       <ul>
         <li>
-          <a href="educacion.html" class="nav-item">
-            <span class="orange-f">Educación</span>
-          </a>
+          <a href="educacion.html" class="nav-item"><span class="orange-f">Educación</span></a>
         </li>
     
         <li class="simulador-dropdown">
-          <a href="#simulador" class="nav-item">
-            <span class="orange-f">Simulador</span>
-          </a>
+          <a href="#simulador" class="nav-item">Simulador</a>
           <ul class="simulador-menu">
             <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
             <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
@@ -104,15 +100,11 @@
   <div class="mobile-menu">
     <ul>
       <li>
-        <a href="educacion.html">
-          <span class="orange-f">Educación</span>
-        </a>
+        <a href="educacion.html"><span class="orange-f">Educación</span></a>
       </li>
   
       <li class="simulador-dropdown">
-        <a>
-          <span class="orange-f">Simulador</span>
-        </a>
+        <a>Simulador</a>
         <ul class="simulador-menu">
           <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
           <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
