--- a/simulador.html
+++ b/simulador.html
@@ -41,21 +41,19 @@
     <nav class="header-nav">
       <ul>
         <li>
-          <a href="educacion.html" class="nav-item">
-            <span class="orange-f">Educación</span>
-          </a>
+          <a href="educacion.html" class="nav-item">Educación</a>
         </li>
     
         <li class="simulador-dropdown">
-          <a href="#simulador" class="nav-item">
-            <span class="orange-f">Simulador</span>
-          </a>
+          <a href="#simulador" class="nav-item"><span class="orange-f">Simulador</span></a>
           <ul class="simulador-menu">
             <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
             <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
           </ul>
         </li>
-    
+
+        <li><a href="blog/index.html" class="nav-item">Blog</a></li>
+
         <li><a href="index.html#about" class="nav-item">Sobre Mí</a></li>
       </ul>
     </nav>
@@ -71,23 +69,21 @@
   <div class="mobile-menu">
     <ul>
       <li>
-        <a href="educacion.html">
-          <span class="orange-f">Educación</span>
-        </a>
+        <a href="educacion.html">Educación</a>
       </li>
   
       <li class="simulador-dropdown">
-        <a>
-          <span class="orange-f">Simulador</span>
-        </a>
+        <a><span class="orange-f">Simulador</span></a>
         <ul class="simulador-menu">
           <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
           <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
         </ul>
       </li>
-  
+
+      <li><a href="blog/index.html">Blog</a></li>
+
       <li><a href="index.html#about">Sobre Mí</a></li>
-   
+
     </ul>
   </div>
 </header>
