--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         <ul>
           <li>
             <a href="educacion.html" class="nav-item">
-             Terapia<span class="orange-f"> Financiera</span>
+             <span class="orange-f"> Educación</span>
             </a>
           </li>
       
