Add dynamic education section with tabs

--- a/educacion.html
+++ b/educacion.html
@@ -126,14 +126,14 @@
     Aquí encontrarás recursos gratuitos y prácticos para mejorar tu relación con el dinero. Descarga, comparte y aprende a tu ritmo.
   </p>
 
-  <section class="resource-grid">
-
-    <div class="resource-card">
-      <h3>Simulador: ¿Cuánto puedo ahorrar?</h3>
-      <p>Utiliza esta herramienta para proyectar tus ahorros con interés compuesto.</p>
-      <a href="Simulador.html" class="download-btn">Ir al Simulador</a>
+    <div class="education-box">
+      <div class="education-tabs">
+        <button data-tab="recursos">Recursos</button>
+        <button data-tab="bancos">Aprende de Bancos</button>
+        <button data-tab="finanzas">Aprende de Finanzas</button>
+      </div>
+      <div id="education-content"></div>
     </div>
-  </section>
 </main>
 
 
@@ -178,6 +178,7 @@
   <div class="overlay"></div>
 
 
+  <script src="educacion.js"></script>
   <script src="header.js"></script>
 </body>
 </html>
