--- a/educacion.html
+++ b/educacion.html
@@ -121,7 +121,7 @@
 
   <!-- 🔽 AQUÍ VA EL CONTENIDO EXCLUSIVO DE LA PÁGINA educación.html -->
  <main class="container" style="padding: 120px 20px 60px 20px;">
-  <h1 style="text-align:center;">Repositorio de Educación Financiera</h1>
+  <h1 class="education-title">Repositorio de Educación Financiera</h1>
   <p style="text-align:center; max-width: 700px; margin: 0 auto 40px;">
     Aquí encontrarás recursos gratuitos y prácticos para mejorar tu relación con el dinero. Descarga, comparte y aprende a tu ritmo.
   </p>
