--- a/educacion.html
+++ b/educacion.html
@@ -123,7 +123,7 @@
  <main class="container" style="padding: 120px 20px 60px 20px;">
   <h1 class="education-title">Repositorio de Educación Financiera</h1>
   <p style="text-align:center; max-width: 700px; margin: 0 auto 40px;">
-    Aquí encontrarás recursos gratuitos y prácticos para mejorar tu relación con el dinero. Descarga, comparte y aprende a tu ritmo.
+    <br><br>Aquí encontrarás recursos gratuitos y prácticos para mejorar tu relación con el dinero. Descarga, comparte y aprende a tu ritmo.
   </p>
 
     <div class="education-box">
