--- a/educacion.html
+++ b/educacion.html
@@ -178,6 +178,7 @@
   <div class="overlay"></div>
 
 
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="educacion.js"></script>
   <script src="header.js"></script>
 </body>
