Add section grouping for education content

--- a/educacion.html
+++ b/educacion.html
@@ -132,7 +132,9 @@
         <button data-tab="bancos">Aprende de Bancos</button>
         <button data-tab="finanzas">Aprende de Finanzas</button>
       </div>
-      <div id="education-content"></div>
+      <div class="sections-container">
+        <div id="education-content"></div>
+      </div>
     </div>
 </main>
 
