--- a/educacion.html
+++ b/educacion.html
@@ -132,9 +132,8 @@
         <button data-tab="bancos">Aprende de Bancos</button>
         <button data-tab="finanzas">Aprende de Finanzas</button>
       </div>
-      <div class="sections-container">
-        <div id="education-content"></div>
-      </div>
+      <div class="education-subtabs" id="section-selectors"></div>
+      <div id="education-content"></div>
     </div>
 </main>
 
