Revert "Add categories and sections management"

--- a/educacion.html
+++ b/educacion.html
@@ -132,8 +132,7 @@
         <button data-tab="bancos">Aprende de Bancos</button>
         <button data-tab="finanzas">Aprende de Finanzas</button>
       </div>
-      <div class="category-tabs" id="category-selectors"></div>
-      <div class="section-tabs" id="section-selectors"></div>
+      <div class="education-subtabs" id="section-selectors"></div>
       <div id="education-content"></div>
     </div>
 </main>
