Style section sub-tabs and update JS logic

--- a/educacion.html
+++ b/educacion.html
@@ -133,7 +133,7 @@
         <button data-tab="finanzas">Aprende de Finanzas</button>
       </div>
       <div class="category-tabs" id="category-selectors"></div>
-      <div class="section-tabs" id="section-selectors"></div>
+      <div id="section-selectors" class="education-subtabs" style="display:none"></div>
       <div id="education-content"></div>
     </div>
 </main>
