--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
  <section class="hero-banner">
   <div class="hero-content container">
     <h1>
-      <span class="static-text">¿Quieres un banco que te ayude, pero </span>
+      <span class="static-text">¿Quieres mejorar tus finanzas pero </span>
       <span class="typed-container"><span id="typedText"></span></span>
     </h1>
     <p>
-      Tu negocio es <span class="resaltado">único</span>.<br>
-      Las soluciones también deberían serlo.<br>
-      <span class="resaltado-celeste">Trabajemos rápido, claro y simple.</span>
+      <span class="resaltado">Tus emociones</span> influyen en tus decisiones.<br>
+      Tus decisiones influyen en <span class="resaltado">tus finanzas</span>.<br>
+      <s>No sigas la ruta de otros</s>. <br><span class="resaltado-celeste">Construyamos la tuya.</span>
     </p>
     <a href="#contacto" class="header-button desk-btn">CONTACTO</a>
     <a href="#contacto" class="header-button mobile-btn">CONTACTO</a>
