Implement dynamic education section

--- a/educacion.html
+++ b/educacion.html
@@ -132,6 +132,7 @@
         <button data-tab="bancos">Aprende de Bancos</button>
         <button data-tab="finanzas">Aprende de Finanzas</button>
       </div>
+      <div id="section-selectors" style="display:none; margin:20px 0;"></div>
       <div id="education-content"></div>
     </div>
 </main>
