--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         <h2>Sobre Mí</h2>
         <p>Soy Nicolás, Ingeniero Comercial de la Universidad Adolfo Ibáñez con un Magíster en Finanzas y más de 7 años de experiencia ayudando a personas y empresas a tomar decisiones financieras estratégicas.</p>
         <p>Durante mi carrera, me he especializado en entender en profundidad cómo funcionan los productos bancarios y en diseñar soluciones eficientes de crédito, inversión y planificación que se ajusten a cada situación particular. Combino mi experiencia con el uso de herramientas digitales para entregar un servicio ágil, claro y enfocado en resultados.</p>
-        <p>Actualmente trabajo con sociedades y pymes asesorandolas en soluciones de financiamiento, medios de pago, seguros e inversiones. Mi enfoque está en aportar valor real y acompañarlas en su crecimiento, sin importar su tamaño o industria.</p>
+        <p>Actualmente asesoro a sociedades de diversos rubros en temas como financiamiento, medios de pago, seguros e inversiones. Mi enfoque está en generar valor real y acompañarlas en su crecimiento, sin importar su tamaño o industria.</p>
         
       </div>
       
