--- a/index.html
+++ b/index.html
@@ -165,21 +165,48 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
 
 
 
-<!-- Contenedor de Tarjetas de Simulador -->
-<section id="simulador" class="resource-grid">
-  <a href="simulador.html">
-    <div class="resource-card">
-      <h3>Simulador de Crédito</h3>
-      <p>Simula créditos de Consumo, Hipotecario y Bullet.</p>
-    </div>
-  </a>
-  <a href="inversiones.html">
-    <div class="resource-card">
-      <h3>Simulador de Inversiones</h3>
-      <p>Proyecta tus ahorros con interés compuesto.</p>
-    </div>
-  </a>
+<section id="terapia-financiera" class="section">
+  <div class="container">
+    <h2 class="section-title">🧠 Terapia Financiera</h2>
+    <p class="section-subtitle">Define tus prioridades. Ordena tu dinero. Avanza con claridad.</p>
+
+    <p>
+      Terapia Financiera es un proceso que te ayuda a tomar decisiones financieras con sentido, basadas en tus prioridades personales.
+      El objetivo es simple: reconocer tu situación actual, establecer objetivos realistas y construir un plan que te permita avanzar sin depender de
+      fórmulas genéricas ni recomendaciones externas desconectadas de tu realidad.
+    </p>
+
+    <p>El enfoque combina dos dimensiones:</p>
+    <ul>
+      <li><strong>Lo técnico:</strong> para que puedas entender conceptos como ahorro, deuda, productos financieros e inversión sin confundirte ni depender de terceros.</li>
+      <li><strong>Lo personal:</strong> para que tus decisiones estén alineadas con tus metas y no con expectativas ajenas o impulsos del momento.</li>
+    </ul>
+
+    <p>
+      Este espacio está pensado para personas que no buscan “hacerse expertos” en finanzas, sino tomar el control de lo esencial: cuánto entra,
+      cuánto sale, qué decisiones tienen más impacto y cómo avanzar con estrategia y realismo.
+    </p>
+
+    <h3>¿A quién está dirigido?</h3>
+    <ul>
+      <li>Quieren ordenar sus finanzas pero no saben por dónde empezar.</li>
+      <li>Necesitan claridad para establecer prioridades y dejar de postergar decisiones importantes.</li>
+      <li>Buscan entender mejor conceptos financieros sin tecnicismos innecesarios.</li>
+      <li>Desean definir metas y trabajar con un plan concreto para alcanzarlas.</li>
+      <li>Valoran tener una estructura clara y aplicable a su vida diaria.</li>
+    </ul>
+
+    <h3>¿Qué se espera lograr?</h3>
+    <ul>
+      <li>Tener una visión clara y ordenada de tu situación financiera actual.</li>
+      <li>Establecer metas financieras alineadas con tus prioridades reales.</li>
+      <li>Diseñar un plan de acción con estrategias de ahorro, inversión y uso de productos financieros.</li>
+      <li>Tomar decisiones con mayor seguridad y menor improvisación.</li>
+      <li>Sentir control sobre tu avance, sin depender de recomendaciones externas o modas financieras.</li>
+    </ul>
+  </div>
 </section>
+
 
 
 <!-- SDK de EmailJS -->
@@ -192,13 +219,13 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
 
   <div class="contacto-imagen">
     <div class="texto-superior">
-      <div class="destacado">¡Hablemos!</div><br>
-      <div class="subtitulo">info@nicolasmoroso.cl</div>
+      <div class="destacado">¿Quieres revisar los programas?</div><br>
+      <div class="subtitulo">Haz clic para agendar en encuadrado.com</div>
     </div>
   </div>
 
   <div class="contacto-formulario">
-    <h2>Contacto</h2>
+    <h2>¿Tienes dudas? ¡Escríbeme!</h2>
     <form id="contact-form">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
