--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
 <section id="terapia-financiera" class="section">
   <div class="tf-grid">
     <div class="tf-si">
-      <h2 class="section-title">🧠 Terapia Financiera</h2>
-      <p class="section-subtitle">Define tus prioridades. Ordena tu dinero. Avanza con claridad.</p>
+      <h2 class="section-title">Programa: Terapia Financiera</h2>
+      <p class="section-subtitle"><strong>Define</strong> tus prioridades. <strong>Ordena</strong> tu dinero. <br><strong>Avanza</strong> con claridad.</p>
 
       <p>
         Terapia Financiera es un proceso que te ayuda a tomar decisiones financieras con sentido, basadas en tus prioridades personales.
