Replace heading with inclusive phrasing

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
     <div class="tf-sd"></div>
     <div class="tf-ii"></div>
     <div class="tf-id">
-      <h3>¿A quién está dirigido?</h3>
+      <h3>Está dirigido a quienes:</h3>
       <ul>
         <li>Quieren ordenar sus finanzas pero no saben por dónde empezar.</li>
         <li>Necesitan claridad para establecer prioridades y dejar de postergar decisiones importantes.</li>
