Adjust layout proportions for Terapia Financiera

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
 
 <section id="terapia-financiera" class="section">
   <div class="tf-grid">
-    <div class="tf-si">
+    <div class="tf-row tf-row1">
+      <div class="tf-si">
       <h2 class="section-title">Programa: Terapia Financiera</h2>
       <p class="section-subtitle"><strong>Define</strong> tus prioridades. <strong>Ordena</strong> tu dinero. <br><strong>Avanza</strong> con claridad.</p>
 
@@ -187,10 +188,12 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         Este espacio está pensado para personas que no buscan “hacerse expertos” en finanzas, sino tomar el control de lo esencial: cuánto entra,
         cuánto sale, qué decisiones tienen más impacto y cómo avanzar con estrategia y realismo.
       </p>
+      </div>
+      <div class="tf-sd"></div>
     </div>
-    <div class="tf-sd"></div>
-    <div class="tf-ii"></div>
-    <div class="tf-id">
+    <div class="tf-row tf-row2">
+      <div class="tf-ii"></div>
+      <div class="tf-id">
       <h3>Está dirigido a quienes:</h3>
       <ul>
         <li>Quieren ordenar sus finanzas pero no saben por dónde empezar.</li>
@@ -208,6 +211,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         <li>Tomar decisiones con mayor seguridad y menor improvisación.</li>
         <li>Sentir control sobre tu avance, sin depender de recomendaciones externas o modas financieras.</li>
       </ul>
+      </div>
     </div>
   </div>
 </section>
