--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
     <div class="tf-row tf-row1">
       <div class="tf-si">
       <h2 class="section-title">Programa: Terapia Financiera</h2>
-      <p class="section-subtitle"><strong>Define</strong> tus prioridades. <strong>Ordena</strong> tu dinero. <br><strong>Avanza</strong> con claridad.</p>
+      <p class="section-subtitle"><strong>Define</strong> tus prioridades. <strong>Ordena</strong> tu dinero. <strong>Avanza</strong> con claridad.</p>
 
       <p>
         Terapia Financiera es un proceso que te ayuda a tomar decisiones financieras con sentido, basadas en tus prioridades personales.
