--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
       Tus decisiones influyen en <span class="resaltado">tus finanzas</span>.<br>
       <s>No sigas la ruta de otros</s>. <br><span class="resaltado-celeste">Construyamos la tuya.</span>
     </p>
-    <a href="#contacto" class="header-button desk-btn">CONTACTO</a>
-    <a href="#contacto" class="header-button mobile-btn">CONTACTO</a>
+    <a href="#terapia-financiera" class="hero-button desk-btn">PROGRAMA</a>
+    <a href="#terapia-financiera" class="hero-button mobile-btn">PROGRAMA</a>
       
   </div>
 </section>
