--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
   <div class="contacto-imagen">
     <div class="texto-superior">
       <div class="destacado">¿Quieres revisar los programas?</div><br>
-      <div class="subtitulo">Haz clic para agendar en encuadrado.com</div>
+        <a class="subtitulo" href="https://encuadrado.com/p/nicolas-moroso-1/" target="_blank" rel="noopener noreferrer">Haz clic aquí para agendar</a>
     </div>
   </div>
 
