Open encuadrado.com link in a new tab

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
   <div class="contacto-imagen">
     <div class="texto-superior">
       <div class="destacado">¿Quieres revisar los programas?</div><br>
-        <a class="subtitulo" href="https://encuadrado.com/p/nicolas-moroso-1/">Haz clic aquí para agendar</a>
+        <a class="subtitulo" href="https://encuadrado.com/p/nicolas-moroso-1/" target="_blank">Haz clic aquí para agendar</a>
     </div>
   </div>
 
