--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
 
   <div class="contacto-imagen">
     <div class="texto-superior">
-      <div class="destacado">¿Quieres revisar los programas?</div><br>
-      <div class="subtitulo">Haz clic para agendar en encuadrado.com</div>
+      <div class="destacado">¡Revisa los planes disponibles!</div><br>
+      <div class="subtitulo">Haz clic aquí para agendar</div>
     </div>
   </div>
 
