Add fade-in effect to About and Contact sections

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
   <!-- Contenedor externo que ocupa 100vh y centra la tarjeta -->
   <div class="about-wrapper">
     <!-- Tarjeta que ocupa 70% del espacio del wrapper -->
-    <section id="about" class="about-section">
+    <section id="about" class="about-section section">
       
       <!-- Columna izquierda: Texto -->
       <div class="about-text">
@@ -224,7 +224,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
   emailjs.init("v0jnUzr59T4OChNeK");
 </script>
 
-<div class="contacto-wrapper" id="contacto">
+<div class="contacto-wrapper section" id="contacto">
 
   <div class="contacto-imagen">
     <div class="texto-superior">
