--- a/autodiagnostico.html
+++ b/autodiagnostico.html
@@ -5,153 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Autodiagnóstico Financiero</title>
   <link rel="stylesheet" href="desk.css" />
-  <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-  <!-- HEADER -->
-  <header>
-    <div class="header-container">
-      <div class="menu-wrapper">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-
-      <div class="header-logo">
-        <a href="index.html" class="logo">
-          <img src="logo.png" alt="Terapia Financiera" />
-          <span class="logo-text">
-          inicio<span class="orange-f"></span>
-          </span>
-        </a>
-      </div>
-
-      <!-- Navegación -->
-      <nav class="header-nav">
-        <ul>
-          <li>
-            <a href="educacion.html" class="nav-item">Educación</a>
-          </li>
-
-          <li class="simulador-dropdown">
-            <a href="#simulador" class="nav-item">Simulador</a>
-            <ul class="simulador-menu">
-              <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
-              <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
-            </ul>
-          </li>
-
-          <li><a href="blog/index.html" class="nav-item">Blog</a></li>
-
-          <li><a href="index.html#about" class="nav-item">Sobre Mí</a></li>
-        </ul>
-      </nav>
-
-      <!-- Botón de Agendar Reunión -->
-
-      <div class="header-agendar">
-        <a href="index.html#contacto" class="header-button desk-btn">CONTACTO</a>
-        <a href="index.html#contacto" class="header-button mobile-btn">CONTACTO</a>
-      </div>
-
-      <!-- Menú desplegable en móvil -->
-      <div class="mobile-menu">
-        <ul>
-          <li>
-            <a href="educacion.html">Educación</a>
-          </li>
-
-          <li class="simulador-dropdown">
-            <a>Simulador</a>
-            <ul class="simulador-menu">
-              <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
-              <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
-            </ul>
-          </li>
-
-          <li><a href="blog/index.html">Blog</a></li>
-
-          <li><a href="index.html#about">Sobre Mí</a></li>
-
-        </ul>
-      </div>
-    </div>
-  </header>
-
   <main class="container">
     <h1>Autodiagnóstico Financiero</h1>
     <form id="diagnostico-form">
-      <div class="pregunta">
-        <p>1. ¿Tus ingresos mensuales te permiten cubrir todos tus gastos sin endeudarte?</p>
-        <label><input type="radio" name="p1" value="2" required> Sí, sin problema.</label>
-        <label><input type="radio" name="p1" value="1"> A veces me alcanza.</label>
-        <label><input type="radio" name="p1" value="0"> No, uso crédito.</label>
-      </div>
+   <div>
+  <p>1. ¿Tus ingresos mensuales te permiten cubrir todos tus gastos sin endeudarte?</p>
+  <label><input type="radio" name="p1" value="2" required> Sí, sin problema.</label>
+  <label><input type="radio" name="p1" value="1"> A veces me alcanza.</label>
+  <label><input type="radio" name="p1" value="0"> No, uso crédito.</label>
+</div>
 
-      <div class="pregunta">
-        <p>2. ¿Tienes deudas activas?</p>
-        <label><input type="radio" name="p2" value="2" required> No tengo deudas.</label>
-        <label><input type="radio" name="p2" value="1"> Las tengo bajo control.</label>
-        <label><input type="radio" name="p2" value="0"> Me cuesta pagarlas.</label>
-      </div>
+<div>
+  <p>2. ¿Tienes deudas activas?</p>
+  <label><input type="radio" name="p2" value="2" required> No tengo deudas.</label>
+  <label><input type="radio" name="p2" value="1"> Las tengo bajo control.</label>
+  <label><input type="radio" name="p2" value="0"> Me cuesta pagarlas.</label>
+</div>
 
-      <div class="pregunta">
-        <p>3. ¿Tienes un fondo de emergencia?</p>
-        <label><input type="radio" name="p3" value="2" required> Sí, al menos 3 meses.</label>
-        <label><input type="radio" name="p3" value="1"> Tengo algo.</label>
-        <label><input type="radio" name="p3" value="0"> No tengo.</label>
-      </div>
+<div>
+  <p>3. ¿Tienes un fondo de emergencia?</p>
+  <label><input type="radio" name="p3" value="2" required> Sí, al menos 3 meses.</label>
+  <label><input type="radio" name="p3" value="1"> Tengo algo.</label>
+  <label><input type="radio" name="p3" value="0"> No tengo.</label>
+</div>
 
-      <div class="pregunta">
-        <p>4. ¿Sueles planificar tus gastos con un presupuesto?</p>
-        <label><input type="radio" name="p4" value="2" required> Sí, llevo control mensual.</label>
-        <label><input type="radio" name="p4" value="1"> A veces lo hago.</label>
-        <label><input type="radio" name="p4" value="0"> No planifico.</label>
-      </div>
+<div>
+  <p>4. ¿Sueles planificar tus gastos con un presupuesto?</p>
+  <label><input type="radio" name="p4" value="2" required> Sí, llevo control mensual.</label>
+  <label><input type="radio" name="p4" value="1"> A veces lo hago.</label>
+  <label><input type="radio" name="p4" value="0"> No planifico.</label>
+</div>
 
-      <div class="pregunta">
-        <p>5. ¿Tienes metas financieras definidas?</p>
-        <label><input type="radio" name="p5" value="2" required> Sí, tengo un plan.</label>
-        <label><input type="radio" name="p5" value="1"> Tengo ideas, sin estructura.</label>
-        <label><input type="radio" name="p5" value="0"> No he pensado en eso.</label>
-      </div>
+<div>
+  <p>5. ¿Tienes metas financieras definidas?</p>
+  <label><input type="radio" name="p5" value="2" required> Sí, tengo un plan.</label>
+  <label><input type="radio" name="p5" value="1"> Tengo ideas, sin estructura.</label>
+  <label><input type="radio" name="p5" value="0"> No he pensado en eso.</label>
+</div>
+
+<button type="submit">Ver resultado</button>
+
     </form>
-    <div id="resultado" class="resultado" style="display:none"></div>
+    <div id="resultado" class="resultado"></div>
   </main>
-
-  <!-- Botón de WhatsApp -->
-  <a href="https://wa.me/56951793156" class="whatsapp-button" target="_blank">
-    <img src="ws.png" alt="WhatsApp">
-  </a>
-
-  <!-- Elemento overlay -->
-  <div class="overlay"></div>
-
-  <footer id="contact">
-    <div class="footer-container">
-      <div class="footer-logo">
-        <h2>nicolasmoroso.cl</h2>
-      </div>
-      <div class="footer-section">
-        <h3>Contacto:</h3>
-        <p>
-          <img src="mailto.png" alt="Correo" class="contact-icon mail-icon">
-          <a href="mailto:info@nicolasmoroso.cl">info@nicolasmoroso.cl</a>
-        </p>
-        <p>
-          <img src="wsblanco.png" alt="WhatsApp" class="contact-icon whatsapp-icon">
-          <a href="https://wa.me/56951793156" target="_blank">+56951793156</a>
-        </p>
-      </div>
-      <div class="footer-socials">
-        <a href="https://www.linkedin.com/in/nicolas-moroso-lillo/"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/labanca.cl/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-      </div>
-    </div>
-  </footer>
-
   <script src="autodiagnostico.js"></script>
-  <script src="header.js"></script>
 </body>
 </html>
