--- a/autodiagnostico.html
+++ b/autodiagnostico.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Autodiagnóstico Financiero</title>
+  <title>Autodiagnóstico de Bienestar Financiero</title>
   <link rel="stylesheet" href="desk.css" />
   <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
@@ -79,7 +79,7 @@
   </header>
 
   <main class="container autodiagnostico-container">
-    <h1>Autodiagnóstico Financiero</h1>
+    <h1>Autodiagnóstico de Bienestar Financiero</h1>
     <form id="diagnostico-form" class="diagnostico-form">
       <div class="pregunta card">
         <p>1. ¿Tus ingresos mensuales te permiten cubrir todos tus gastos sin endeudarte?</p>
