Add financial state accordions to Terapia Financiera

--- a/index.html
+++ b/index.html
@@ -188,10 +188,42 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         cuánto sale, qué decisiones tienen más impacto y cómo avanzar con estrategia y realismo.
       </p>
       </div>
-      <div class="tf-sd"></div>
+      <div class="tf-sd">
+        <div class="accordion-item">
+          <button class="accordion-title">🔴 1. Supervivencia Financiera</button>
+          <div class="accordion-content">
+            Estás al día con lo justo. Los ingresos apenas alcanzan para cubrir lo básico y cualquier imprevisto puede desestabilizarte. Hay dependencia del crédito o ayudas externas, y el estrés financiero es constante.
+          </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-title">🟡 2. Estabilidad Financiera</button>
+          <div class="accordion-content">
+            Logras cubrir tus gastos mensuales y evitar deudas problemáticas. Hay algo de ahorro, pero sin una estrategia clara. Estás fuera de peligro, pero aún no construyes un verdadero colchón financiero.
+          </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-title">🟢 3. Tranquilidad Financiera</button>
+          <div class="accordion-content">
+            Tienes control total de tus finanzas: ahorras, planificas y no dependes del crédito. Puedes enfrentar imprevistos sin desestabilizarte. Tu enfoque empieza a moverse del presente hacia el futuro.
+          </div>
+        </div>
+      </div>
     </div>
     <div class="tf-row tf-row2">
-      <div class="tf-ii"></div>
+      <div class="tf-ii">
+        <div class="accordion-item">
+          <button class="accordion-title">🔵 4. Proyección Financiera</button>
+          <div class="accordion-content">
+            Estás construyendo patrimonio con intención. Inviertes, diversificas y piensas en metas de mediano y largo plazo. Tu dinero comienza a trabajar para ti, y ya proyectas un estilo de vida más libre y sostenible.
+          </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-title">⚪ 5. Libertad Financiera</button>
+          <div class="accordion-content">
+            Tu situación económica te permite decidir sin que el dinero sea un obstáculo. Ingresos pasivos o inversiones cubren tus necesidades. Ya no solo gestionas tu dinero: lo usas como herramienta para vivir en tus propios términos.
+          </div>
+        </div>
+      </div>
       <div class="tf-id">
       <h3>Está dirigido a quienes:</h3>
       <ul>
