Revert "Fix accordion layout and align icons"

--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
             Tienes control total de tus finanzas: ahorras, planificas y no dependes del crédito. Puedes enfrentar imprevistos sin desestabilizarte. Tu enfoque empieza a moverse del presente hacia el futuro.
           </div>
         </div>
+      </div>
+    </div>
+    <div class="tf-row tf-row2">
+      <div class="tf-ii">
         <div class="accordion-item">
           <button class="accordion-title">🔵 4. Proyección Financiera</button>
           <div class="accordion-content">
@@ -220,8 +224,6 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
           </div>
         </div>
       </div>
-    </div>
-    <div class="tf-row tf-row2">
       <div class="tf-id">
       <h3>Está dirigido a quienes:</h3>
       <ul>
