--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         <h2>Sobre Mí</h2>
         <p>Soy Nicolás, Ingeniero Comercial de la Universidad Adolfo Ibáñez con un Magíster en Finanzas y más de 7 años de experiencia ayudando a personas y empresas a tomar decisiones financieras estratégicas.</p>
         <p>Durante mi carrera, me he especializado en entender en profundidad cómo funcionan los productos bancarios y en diseñar soluciones eficientes de crédito, inversión y planificación que se ajusten a cada situación particular. Combino mi experiencia con el uso de herramientas digitales para entregar un servicio ágil, claro y enfocado en resultados.</p>
-        <p>Actualmente asesoro a sociedades de diversos rubros en temas como análisis financiero, planificación estratégica, desarrollo de negocios y gestión comercial. Mi enfoque está en generar valor real y acompañarlas en su crecimiento, sin importar su tamaño o industria.</p>
+        <p>Actualmente asesoro a personas, emprendedores y empresas de distintos rubros en análisis financiero, planificación estratégica y desarrollo comercial. Mi enfoque está en entregar claridad, herramientas prácticas y acompañamiento personalizado para que puedan tomar decisiones con confianza y hacer crecer sus proyectos, sin importar su tamaño o industria.</p>
         
       </div>
       
@@ -173,7 +173,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
 
       <p>
         Terapia Financiera es un proceso que te ayuda a tomar decisiones financieras con sentido, basadas en tus prioridades personales.
-        El objetivo es simple: reconocer tu <strong>estado financiero personal</strong> actual, establecer objetivos realistas y construir un plan que te permita avanzar sin depender de
+        El objetivo es simple: reconocer tu <strong>estado financiero personal</strong> actual, <strong>establecer objetivos</strong> realistas y <strong>construir un plan</strong> que te permita avanzar sin depender de
         fórmulas genéricas ni recomendaciones externas desconectadas de tu realidad.
       </p>
 
@@ -189,33 +189,33 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
       </p>
       </div>
       <div class="tf-sd">
-        <h3 class="sd-title">Conoces los estados financieros personales</h3>
+        <h3 class="sd-title">Conoce los estados financieros personales</h3>
         <div class="accordion-item">
-          <button class="accordion-title"><strong>🔴 Supervivencia Financiera</strong></button>
+          <button class="accordion-title"><strong>😰 Supervivencia Financiera</strong></button>
           <div class="accordion-content">
             Estás al día con lo justo. Los ingresos apenas alcanzan para cubrir lo básico y cualquier imprevisto puede desestabilizarte. Hay dependencia del crédito o ayudas externas, y el estrés financiero es constante.
           </div>
         </div>
         <div class="accordion-item">
-          <button class="accordion-title"><strong>🟡 Estabilidad Financiera</strong></button>
+          <button class="accordion-title"><strong>🙂 Estabilidad Financiera</strong></button>
           <div class="accordion-content">
             Logras cubrir tus gastos mensuales y evitar deudas problemáticas. Hay algo de ahorro, pero sin una estrategia clara. Estás fuera de peligro, pero aún no construyes un verdadero colchón financiero.
           </div>
         </div>
         <div class="accordion-item">
-          <button class="accordion-title"><strong>🟢 Tranquilidad Financiera</strong></button>
+          <button class="accordion-title"><strong>🧘‍♂️ Tranquilidad Financiera</strong></button>
           <div class="accordion-content">
             Tienes control total de tus finanzas: ahorras, planificas y no dependes del crédito. Puedes enfrentar imprevistos sin desestabilizarte. Tu enfoque empieza a moverse del presente hacia el futuro.
           </div>
         </div>
         <div class="accordion-item">
-          <button class="accordion-title"><strong>🔵 Proyección Financiera</strong></button>
+          <button class="accordion-title"><strong>🧑‍💻 Proyección Financiera</strong></button>
           <div class="accordion-content">
             Estás construyendo patrimonio con intención. Inviertes, diversificas y piensas en metas de mediano y largo plazo. Tu dinero comienza a trabajar para ti, y ya proyectas un estilo de vida más libre y sostenible.
           </div>
         </div>
         <div class="accordion-item">
-          <button class="accordion-title"><strong>⚪ Libertad Financiera</strong></button>
+          <button class="accordion-title"><strong>🤩 Libertad Financiera</strong></button>
           <div class="accordion-content">
             Tu situación económica te permite decidir sin que el dinero sea un obstáculo. Ingresos pasivos o inversiones cubren tus necesidades. Ya no solo gestionas tu dinero: lo usas como herramienta para vivir en tus propios términos.
           </div>
