Add diagnostic callout and button to program section

--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
     </div>
     <div class="tf-row tf-row2">
       <div class="tf-ii">
+        <h2 class="tf-ii-title">¡Haz el diagnóstico y descubre tu estado actual!</h2>
+        <a href="autodiagnostico.html" class="hero-button">DIAGNÓSTICO</a>
       </div>
       <div class="tf-id">
       <h3>Está dirigido a quienes:</h3>
