Add mobile diagnostic button and menu link

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         <li><a href="blog/index.html">Blog</a></li>
 
         <li><a href="#about">Sobre Mí</a></li>
+        <li><a href="autodiagnostico.html" class="diagnostico-link">Diagnóstico</a></li>
 
       </ul>
     </div>
@@ -226,6 +227,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
       <div class="tf-ii">
         <h2 class="tf-ii-title">¡Haz el diagnóstico y descubre tu estado actual!</h2>
         <a href="autodiagnostico.html" class="hero-button">DIAGNÓSTICO</a>
+        <a href="autodiagnostico.html" class="hero-button mobile-diagnostico">DIAGNÓSTICO</a>
       </div>
       <div class="tf-id">
       <h3>Está dirigido a quienes:</h3>
