Add scheduling button to program

--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
         <li>Tomar decisiones con mayor seguridad y menor improvisación.</li>
         <li>Sentir control sobre tu avance, sin depender de recomendaciones externas o modas financieras.</li>
       </ul>
+      <a href="https://encuadrado.com/p/nicolas-moroso-1/" class="hero-button">AGENDAR</a>
+      <a href="https://encuadrado.com/p/nicolas-moroso-1/" class="hero-button mobile-agendar">AGENDAR</a>
       </div>
     </div>
   </div>
