--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
       <p class="section-subtitle"><strong>Define</strong> tus prioridades. <strong>Ordena</strong> tu dinero. <strong>Avanza</strong> con claridad.</p>
 
       <p>
-        Terapia Financiera es un proceso que te ayuda a tomar decisiones financieras con sentido, basadas en tus prioridades personales.
-        El objetivo es simple: reconocer tu <strong>estado financiero personal</strong> actual, <strong>establecer objetivos</strong> realistas y <strong>construir un plan</strong> que te permita avanzar sin depender de
+        Terapia Financiera es un programa 1 a 1 donde trabajamos en conjunto para que puedas tomar decisiones financieras con sentido, basadas en tus prioridades personales.
+        El objetivo es simple: reconocer tu <strong>estado de bienestar financiero</strong> actual, <strong>establecer objetivos</strong> realistas y <strong>construir un plan</strong> que te permita avanzar sin depender de
         fórmulas genéricas ni recomendaciones externas desconectadas de tu realidad.
       </p>
 
@@ -190,7 +190,7 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
       </p>
       </div>
       <div class="tf-sd">
-        <h3 class="sd-title">Conoce los estados financieros personales</h3>
+        <h3 class="sd-title">Conoce los estados de bienestar financiero</h3>
         <div class="accordion-item">
           <button class="accordion-title"><strong>😰 Supervivencia Financiera</strong></button>
           <div class="accordion-content">
