Change header Contacto button to Agendar

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
       <!-- Botón de Agendar Reunión -->
   
       <div class="header-agendar">
-        <a href="#contacto" class="header-button desk-btn">CONTACTO</a>
-        <a href="#contacto" class="header-button mobile-btn">CONTACTO</a>
+        <a href="https://encuadrado.com/p/nicolas-moroso-1/" class="header-button desk-btn">AGENDAR</a>
+        <a href="https://encuadrado.com/p/nicolas-moroso-1/" class="header-button mobile-btn">AGENDAR</a>
       </div>
     
     <!-- Menú desplegable en móvil -->
