--- a/index.html
+++ b/index.html
@@ -3,52 +3,31 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id=GTM-53888FR6'+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-53888FR6');</script>
+  <!-- End Google Tag Manager -->
+
   <meta name="google-site-verification" content="6CyGdduy_6elptw7WOq3KNZLswDURqGI__AuQbK5Fl8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
 
-  
   <link rel="icon" href="favicon.png" type="image/png">
-
-<!-- Google tag (gtag.js) - GA4 + Ads -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VPV6N6FHHX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  // Google Analytics
-  gtag('config', 'G-VPV6N6FHHX');
-
-  // Google Ads
-  gtag('config', 'AW-16968424160');
-</script>
-
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1263310729136170');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1263310729136170&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-
-<link rel="stylesheet" href="desk.css">
-<link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
+  <link rel="stylesheet" href="desk.css">
+  <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53888FR6"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 
   <!-- HEADER -->
