--- a/inversiones.html
+++ b/inversiones.html
@@ -1,23 +1,33 @@
+<!-- Este código está hecho por NML -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simulador de Inversiones</title>
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id=GTM-53888FR6'+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-53888FR6');</script>
+  <!-- End Google Tag Manager -->
+
+  <meta name="google-site-verification" content="6CyGdduy_6elptw7WOq3KNZLswDURqGI__AuQbK5Fl8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inicio</title>
+
+  <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="desk.css">
   <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-  <style>
-    body {
-      background-color: #fbfcfd;
-    }
-  </style>
-  <!-- Scripts adicionales si son necesarios, como Calendly o Google Tag Manager -->
 </head>
+
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53888FR6"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
  <!-- HEADER -->
  <header>
