Reestructura simulador de créditos móvil

--- a/simulador.html
+++ b/simulador.html
@@ -372,8 +372,15 @@
 </div>
 
 
+<!-- Botón para desplegar el cuadro de desarrollo -->
+<button id="toggleTabla" class="tabla-btn">Ver desarrollo del crédito</button>
+
 <!-- Cuadro de desarrollo de pagos (tabla) -->
-<div class="simulador-tabla" id="resultado"></div>
+<div id="tablaPanel">
+  <button id="closeTabla" class="tabla-close-btn">✕ Cerrar</button>
+  <div class="simulador-tabla" id="resultado"></div>
+</div>
+<div id="tablaOverlay" class="tabla-overlay"></div>
 
 </div>
 
