Stack labels above inputs in credit simulator

--- a/simulador.html
+++ b/simulador.html
@@ -174,13 +174,13 @@
       </div>
 
       <!-- Grupo para el checkbox del seguro -->
-      <div class="form-group">
+      <div class="form-group checkbox-group">
         <input type="checkbox" id="checkSeguro">
         <label for="checkSeguro">Incluir seguro de desgravamen</label>
       </div>
 
       <!-- Grupo para los botones -->
-      <div class="form-group">
+      <div class="form-group button-group">
         <!-- Aquí se llama a cconsumoamort() -->
         <button type="button" onclick="cconsumoamort()">Calcular</button>
         <button type="button" onclick="limpiarSimulacion()">Limpiar</button>
@@ -258,7 +258,7 @@
       </div>
 
       <!-- Botones -->
-      <div class="form-group">
+      <div class="form-group button-group">
         <!-- Aquí se llama a chipotecarioamort() -->
         <button type="button" onclick="chipotecarioamort()">Calcular</button>
         <button type="button" onclick="limpiarSimulacionHipotecario()">Limpiar</button>
@@ -337,12 +337,12 @@
         <input type="number" id="plazoDiasBullet" required>
       </div>
       <!-- Seguro de desgravamen -->
-      <div class="form-group">
+      <div class="form-group checkbox-group">
         <input type="checkbox" id="checkSeguroBullet">
         <label for="checkSeguroBullet">Incluir seguro de desgravamen</label>
       </div>
       <!-- Botones -->
-      <div class="form-group">
+      <div class="form-group button-group">
         <button type="button" onclick="cbulletamort()">Calcular</button>
         <button type="button" onclick="limpiarSimulacionBullet()">Limpiar</button>
       </div>
