Improve FAQ question readability

--- a/index.html
+++ b/index.html
@@ -235,6 +235,74 @@
 
 
 
+<section id="faq" class="section">
+  <div class="faq-grid">
+    <h2 class="section-title">Preguntas Frecuentes (FAQ)</h2>
+    <div class="faq">
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Qué es la Terapia Financiera?</strong></button>
+        <div class="accordion-content">
+          Es un proceso práctico de educación y acompañamiento que busca ordenar tus finanzas personales, reducir el estrés financiero y ayudarte a tomar decisiones claras. No se trata de austeridad, sino de usar el dinero como una herramienta para lograr tus objetivos de vida.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿En qué se diferencia de una asesoría financiera tradicional?</strong></button>
+        <div class="accordion-content">
+          Aquí no vendemos un producto asociado a la problemática. El enfoque es independiente y educativo: entrego claridad con herramientas, simuladores y un plan aplicable a tu realidad, sin conflictos de interés.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Qué puedo esperar de una sesión 1:1?</strong></button>
+        <div class="accordion-content">
+          En cada sesión revisamos tu situación financiera actual, definimos tus objetivos y trabajamos con simuladores o ejercicios prácticos (créditos, inversiones, presupuestos). Te llevas pasos concretos para avanzar y materiales de apoyo.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Necesito conocimientos previos de finanzas?</strong></button>
+        <div class="accordion-content">
+          No. La idea es justamente partir desde cero si es necesario. Los conceptos se explican de manera sencilla y aplicados a tu vida diaria.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Cuánto duran las sesiones y cómo se realizan?</strong></button>
+        <div class="accordion-content">
+          Cada sesión dura alrededor de 45 minutos y se realiza de forma online, para que puedas conectarte desde cualquier lugar.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Los simuladores reemplazan la asesoría?</strong></button>
+        <div class="accordion-content">
+          No. Los simuladores son herramientas de apoyo para visualizar escenarios. La asesoría agrega interpretación, estrategia y un plan personalizado para ti.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Qué pasa si ya tengo deudas?</strong></button>
+        <div class="accordion-content">
+          Podemos trabajar en un plan de orden y pago, evaluando alternativas para reducir costos financieros y evitar que el ciclo de endeudamiento siga creciendo.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿La asesoría incluye inversiones?</strong></button>
+        <div class="accordion-content">
+          Sí, revisamos opciones de inversión según tu perfil y objetivos, siempre de forma general y educativa. No entrego recomendaciones específicas de compra o venta, sino que te enseño a comparar y decidir con criterio.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Cómo agendo una sesión?</strong></button>
+        <div class="accordion-content">
+          Puedes hacerlo directamente desde la sección Agendar en esta página. Allí eliges día y la hora.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-title"><strong>¿Quién puede tomar estas asesorías?</strong></button>
+        <div class="accordion-content">
+          Cualquier persona que quiera mejorar su relación con el dinero, aprender a manejar créditos, ordenar sus finanzas personales o comenzar a invertir de forma informada.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- SDK de EmailJS -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
