--- a/autodiagnostico.html
+++ b/autodiagnostico.html
@@ -190,7 +190,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
       </div>
       <div class="footer-socials">
         <a href="https://www.linkedin.com/in/nicolas-moroso-lillo/"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/labanca.cl/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/nicolasmoroso_/"><i class="fa-brands fa-instagram"></i></a>
         <a href="#"><i class="fa-brands fa-facebook"></i></a>
       </div>
     </div>
