Revert "Merge pull request #108 from nmoroso/codex/modify-footer-instagram-button"
This reverts commit b30554c6aade3b00120d83129b2d70c248df6736, reversing
changes made to 4740e2312b741ce9a207b1da7f7e06fa14b26474.

--- a/inversiones.html
+++ b/inversiones.html
@@ -266,7 +266,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
         <!-- Redes Sociales -->
         <div class="footer-socials">
           <a href="https://www.linkedin.com/in/nicolas-moroso-lillo/"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://www.instagram.com/nicolasmoroso_/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.instagram.com/labanca.cl/"><i class="fa-brands fa-instagram"></i></a>
           <a href="#"><i class="fa-brands fa-facebook"></i></a>
         </div>
       </div>
