--- a/simulador.html
+++ b/simulador.html
@@ -78,6 +78,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
           <ul class="simulador-menu">
             <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
             <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
+            <li><a href="balance.html" class="submenu-item">Balance</a></li>
           </ul>
         </li>
 
@@ -106,6 +107,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
         <ul class="simulador-menu">
           <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
           <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
+          <li><a href="balance.html" class="submenu-item">Balance</a></li>
         </ul>
       </li>
 
