Simplify landing page and move auxiliary sections

--- a/educacion.html
+++ b/educacion.html
@@ -80,13 +80,13 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
     
         <li class="simulador-dropdown">
           <a href="#simulador" class="nav-item">Simulador</a>
-          <ul class="simulador-menu">
-            <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
-            <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
+            <ul class="simulador-menu">
+              <li><a href="nodisp/simulador.html" class="submenu-item">Créditos</a></li>
+              <li><a href="nodisp/inversiones.html" class="submenu-item">Inversiones</a></li>
           </ul>
         </li>
 
-        <li><a href="blog/index.html" class="nav-item">Blog</a></li>
+          <li><a href="nodisp/blog/index.html" class="nav-item">Blog</a></li>
 
         <li><a href="index.html#about" class="nav-item">Sobre Mí</a></li>
       </ul>
@@ -108,13 +108,13 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
   
       <li class="simulador-dropdown">
         <a>Simulador</a>
-        <ul class="simulador-menu">
-          <li><a href="simulador.html" class="submenu-item">Créditos</a></li>
-          <li><a href="inversiones.html" class="submenu-item">Inversiones</a></li>
+            <ul class="simulador-menu">
+              <li><a href="nodisp/simulador.html" class="submenu-item">Créditos</a></li>
+              <li><a href="nodisp/inversiones.html" class="submenu-item">Inversiones</a></li>
         </ul>
       </li>
 
-      <li><a href="blog/index.html">Blog</a></li>
+        <li><a href="nodisp/blog/index.html">Blog</a></li>
 
       <li><a href="index.html#about">Sobre Mí</a></li>
 
