Revert "Simplify landing page and relocate auxiliary sections"

--- a/inversiones.html
+++ b/inversiones.html
@@ -34,9 +34,9 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
 
-  <link rel="icon" href="../favicon.png" type="image/png">
-  <link rel="stylesheet" href="../desk.css">
-  <link rel="stylesheet" href="../mobile.css" media="screen and (max-width: 768px)">
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="desk.css">
+  <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -55,8 +55,8 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
     </div>
 
     <div class="header-logo">
-     <a href="../index.html" class="logo">
-        <img src="../logo.png" alt="Terapia Financiera" />
+     <a href="index.html" class="logo">
+        <img src="logo.png" alt="Terapia Financiera" />
         <span class="logo-text">
         inicio<span class="orange-f"></span>
         </span>
@@ -70,7 +70,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
     <nav class="header-nav">
       <ul>
         <li>
-          <a href="../educacion.html" class="nav-item">Educación</a>
+          <a href="educacion.html" class="nav-item">Educación</a>
         </li>
     
         <li class="simulador-dropdown">
@@ -83,7 +83,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
 
         <li><a href="blog/index.html" class="nav-item">Blog</a></li>
 
-        <li><a href="../index.html#about" class="nav-item">Sobre Mí</a></li>
+        <li><a href="index.html#about" class="nav-item">Sobre Mí</a></li>
       </ul>
     </nav>
     
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
   <div class="mobile-menu">
     <ul>
       <li>
-        <a href="../educacion.html">Educación</a>
+        <a href="educacion.html">Educación</a>
       </li>
   
       <li class="simulador-dropdown">
@@ -111,7 +111,7 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
 
       <li><a href="blog/index.html">Blog</a></li>
 
-      <li><a href="../index.html#about">Sobre Mí</a></li>
+      <li><a href="index.html#about">Sobre Mí</a></li>
 
     </ul>
   </div>
@@ -253,11 +253,11 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
     <div class="footer-section">
       <h3>Contacto:</h3>
       <p>
-      <img src="../mailto.png" alt="Correo" class="contact-icon mail-icon">
+        <img src="mailto.png" alt="Correo" class="contact-icon mail-icon">
         <a href="mailto:info@nicolasmoroso.cl">info@nicolasmoroso.cl</a>
       </p>
       <p>
-      <img src="../wsblanco.png" alt="WhatsApp" class="contact-icon whatsapp-icon">
+        <img src="wsblanco.png" alt="WhatsApp" class="contact-icon whatsapp-icon">
         <a href="https://wa.me/56951793156?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20sesiones.%20%C2%BFMe%20puedes%20orientar%3F" target="_blank">+56951793156</a>
       </p>
     </div>
@@ -273,15 +273,15 @@ src="https://www.facebook.com/tr?id=1460810141740139&ev=PageView&noscript=1"
     </footer>
 
   <!-- Botón de WhatsApp -->
-<a href="https://wa.me/56951793156?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20sesiones.%20%C2%BFMe%20puedes%20orientar%3F" class="whatsapp-button" target="_blank">
-  <img src="../ws.png" alt="WhatsApp">
+  <a href="https://wa.me/56951793156?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20las%20sesiones.%20%C2%BFMe%20puedes%20orientar%3F" class="whatsapp-button" target="_blank">
+    <img src="ws.png" alt="WhatsApp">
   </a>
 
   <!-- Elemento overlay -->
   <div class="overlay"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="inversiones.js"></script>
-<script src="../header.js"></script>
+  <script src="inversiones.js"></script>
+  <script src="header.js"></script>
 </body>
 </html>
